codebase/infra/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: elyra
  labels:
    app.kubernetes.io/name: elyra
    environment: production
